hphp/hack/test/typecheck/new_inference/nested_list.php.like_types.exp
File "nested_list.php", line 10, characters 10-30:
Invalid return type (Typing[4110])
File "nested_list.php", line 8, characters 24-49:
Expected ~(int, int, string, string) because it is an unenforceable type
File "nested_list.php", line 10, characters 10-30:
But got (~int, ~int, ~string, ~string)
